# antonLib

./: README.md  __init__.py  __main__.py  antonLib.py  avatarInfo.py  createdUser.py  defAvatar.json  pixelPaintInfo.py  pyproject.toml  requirements.txt  session.py
antonLib/: pyproject.toml
antonLib/src/: __init__.py  __main__.py  antonLib.py  createdUser.py  exceptions.py  session.py
documentation/: accountStuff.md  games.md  start.md
src/: createdUser.py
