[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antonLib"
version = "0.1.1.1"
description = "A library for interacting with the learning platform anton.app."
readme = "README.md"
authors = [{ name = "Antonabi" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["antonapp", "anton.app", "anton"]
dependencies = [
    "certifi", 
    "charset-normalizer", 
    "idna", 
    "requests", 
    "urllib3"
]

requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.scripts]
    antonLib = "reader.__main__:main"

    [project.urls]
    repository    = "https://github.com/Antonabi/antonLib/"
    documentation = "https://github.com/Antonabi/antonLibDoc/"
[tool.bumpver]
current_version = "2024.1002-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

